Added more sections and styled them

--- a/css/main.sass
+++ b/css/main.sass
@@ -5,6 +5,8 @@
 //Import Partials
 @import "./partials/_base.sass"
 @import "./partials/_header.sass"
+@import "./partials/_secondSection.sass"
+@import "./partials/_thirdSection.sass"
 
 //Import Vendor
 @import "./vendor/_normalize.sass"
