--- a/css/partials/_base.sass
+++ b/css/partials/_base.sass
@@ -14,14 +14,17 @@ $blurBg: $mainColor
 //Font Styles
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 $family: "Josefin Sans", sans-serif
-$pSize: 1.2em
-$mainHead: 2em
-$navFontSize: 1.3em
+
+//Font sizes for each media query break
+//Normal
+$h1: 2em
+$h2: 1.5em
+$p: 1.2em
 
 //Margins
-$marginTop: 70px
+$margin: 1em
 $blurbSides: .5em
-$pIndent: 1em
+$pIndent: .5em
 
 //Padding
 $pPadding: 1em
