--- a/css/modules/_headers.sass
+++ b/css/modules/_headers.sass
@@ -8,7 +8,7 @@ h3
 
 .sectionHeader
   font-family: $family
-  font-size: $mainHead
+  font-size: $h1
   text-align: center
   h1
     text-decoration: underline
@@ -16,8 +16,11 @@ h3
 
 .blurb
   padding: $pPadding
-  font-size: $pSize
+  font-size: $p
   font-family: $family
   color: $secondColor
   text-align: center
   background: $blurBg
+  p
+    margin-left: $pIndent
+    text-align: left
